# auto-grade

./: .gitignore  README.md  config.yaml.example  lint  pyproject.toml  setup.cfg  setup.py
auto_grade/: __main__.py  auto_grade.py  cli.py  config.py  feedback.py  utils.py
